--- a/app/src/Program_Huaman_Mendoza_Ramirez.ipynb
+++ b/app/src/Program_Huaman_Mendoza_Ramirez.ipynb
@@ -14,7 +14,15 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "La sintaxis del comando no es correcta.\n"
+          ]
+        }
+      ],
       "source": [
         "!mkdir -p ./results"
       ]
@@ -45,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "fgcPU8J2jSmV"
       },
@@ -2055,7 +2063,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.10"
+      "version": "3.11.1"
     }
   },
   "nbformat": 4,
